--- a/layout/screen-wide.less
+++ b/layout/screen-wide.less
@@ -24,38 +24,32 @@ figure.narrow {
   margin-left: 2ex;
   width: 20%;
 }
-
 img.narrow {
   display: block;
   width: 100%;
   height: auto;
 }
-
 .article-body > .side-by-side-figure__container {
   clear: both;
   display: flex;
   flex-direction: row;
-
   figure.semi-text-width {
+    display: block;
     width: 50%;
   }
-  
   figure.semi-text-width:first-child {
     margin-left: 0;
     margin-right: 1pt;
   }
-  
   figure.semi-text-width:last-child {
     margin-left: 1pt;
     margin-right: 0;
   }
-  
   img.semi-text-width {
     display: block;
     width: 100%;
     height: auto;
   }
-  
   figure.semi-text-width figcaption {
     padding: .75em 2ex;
   }
